bk_ida/gobmkida/c3/purge_persistent_reading_cache
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/purge_persistent_reading_cache/src/engine/persistent.c:701:6: error: use of undeclared identifier 'purge_persistent_reading_cache_last_purge_position_number'
if ( purge_persistent_reading_cache_last_purge_position_number != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/purge_persistent_reading_cache/src/engine/persistent.c:703:1: error: use of undeclared identifier 'purge_persistent_reading_cache_last_purge_position_number'
purge_persistent_reading_cache_last_purge_position_number = position_number; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/purge_persistent_reading_cache/src/engine/persistent.c:818:25: error: use of undeclared identifier 'byte_9C689C'
v13 = ( unsigned __int8)byte_9C689C[v12]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/purge_persistent_reading_cache/src/engine/persistent.c:834:79: error: use of undeclared identifier 'reading_cache'
memcpy( &persistent_reading_cache[v1], &persistent_reading_cache[v4], sizeof( reading_cache)); 
                                                                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/purge_persistent_reading_cache/src/obj/1/persistent.o] Error 1
